--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,22 +53,14 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-	<filter>
-		<filter-name>loginFilter</filter-name>
-		<filter-class>com.support.web.filter.LoginFilter</filter-class>
-		<init-param>
-			<param-name>exclude</param-name>
-			<param-value>^/$,^/employee/login$,^/employee/login_flailure$,^/favicon\.ico$,.+\.css,.+\.js,.+\.jpg,.+\.png,.+\.gif</param-value>
-		</init-param>
-		<init-param>
-			<param-name>loginUrl</param-name>
-			<param-value>/employee/login?from=</param-value>
-		</init-param>
-	</filter>
 	
+	<filter>
+		<filter-name>WebContextFilter</filter-name>
+		<filter-class>com.support.web.filter.webcontext.WebContextFilter</filter-class>
+	</filter>
+
 	<filter-mapping>
-		<filter-name>loginFilter</filter-name>
+		<filter-name>WebContextFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
@@ -86,14 +78,22 @@
 		<filter-name>openSessionInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<filter>
-		<filter-name>WebContextFilter</filter-name>
-		<filter-class>com.winxuan.ec.support.web.filter.WebContextFilter</filter-class>
-	</filter>
 
+	<filter>
+		<filter-name>loginFilter</filter-name>
+		<filter-class>com.support.web.filter.authentication.LoginFilter</filter-class>
+		<init-param>
+			<param-name>exclude</param-name>
+			<param-value>^/$,^/login$,^/login_flailure$,^/favicon\.ico$,.+\.css,.+\.js,.+\.jpg,.+\.png,.+\.gif</param-value>
+		</init-param>
+		<init-param>
+			<param-name>loginUrl</param-name>
+			<param-value>/login?from=</param-value>
+		</init-param>
+	</filter>
+	
 	<filter-mapping>
-		<filter-name>WebContextFilter</filter-name>
+		<filter-name>loginFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
